--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <br>
-        <!-- Header to help with scanning code -->
+        <!-- Header -->
         <header>
             <div>
                 <span>Techium</span>
@@ -18,7 +18,7 @@
             </div>
         </header>
         <br>
-        <!-- Main to help with scanning your code -->
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
             <br>
@@ -134,7 +134,7 @@
             </section>
         </main>
         <br>
-        <!-- Footer to help with scanning your code -->
+        <!-- Footer -->
         <footer>
             <div>
                 Footer
