--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -129,6 +129,25 @@
                 </tbody>
             </table>
           </section>
+          <hr>
+          <!-- Details -->
+          <section>
+            <header><h2>Details</h2></header>
+            <div>
+                <h3>Default</h3>
+                <details>
+                    <summary>Show/Hide me</summary>
+                    summary: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                </details>
+            </div>
+            <div>
+                <h3>Open</h3>
+                <details>
+                    <summary>Always open</summary>
+                    summary: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                </details>
+            </div>
+          </section>
         </main>
         <footer></footer>
     </body>
